oop_mro/tests/trybuild/fail_mixed_virtual_nonvirtual_base.rs
use oop_mro::prelude::*;

oop_class! {
    class Root {}
    class Left: virtual Root {}
    class Right: Root {}
    class Diamond: Left, Right {}
}

fn main() {}
